--- a/.github/workflows/on_push_build_windows_x64.yml
+++ b/.github/workflows/on_push_build_windows_x64.yml
@@ -1,9 +1,7 @@
 name: on_push_build_windows_x64
 on:
   push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
 
 env:
   SOLUTION_FILE_PATH: umdh-root.pro
@@ -14,8 +12,14 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
+    # Initializes the CodeQL tools for scanning.
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+      with:
+           languages: cpp
+        
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1
     
@@ -27,13 +31,19 @@ jobs:
       
     - uses: actions/checkout@v2
     - uses: ilammy/msvc-dev-cmd@v1
-           
+    
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v2
+        
     - name: Build
       env:
         QTDIR: ${{env.Qt5_DIR}}
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: qmake ${{env.SOLUTION_FILE_PATH}} && nmake
     
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
+        
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
